# toLatex

./: .gitignore  Dockerfile  Pipfile  README.md  api.py  clients.py  convertor.py  main.py  models.py  preprocessing.py  pyproject.toml  requirements.txt  toLatex.py  vercel.json
.github/workflows/: deploy.yml
api/: index.py  process.py  requirements.txt
app/: main.py  requirements.txt
app/templates/: index.html
static/: output.css  styles.css
templates/: index.html  output.html
