[project]
name = "toLatex"
version = "0.1.0"
requires-python = "~=3.9"

dependencies = [
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.2",
    "jinja2>=3.1.2",
    "vercel-blob>=0.4.0", # Loosening the version constraint to help with resolution
    "httpx>=0.24.1",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
]
