[project]
name = "toLatex"
version = "0.1.0"
requires-python = "~=3.9"

dependencies = [
    # Main App Dependencies
    "fastapi>=0.103.0",
    "uvicorn[standard]>=0.23.2",
    "jinja2>=3.1.2",
    "vercel-blob==0.2.5", # Pinning to a version known to be compatible with Python 3.12
    "httpx>=0.24.1",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",

    # API Function Dependencies
    "openai>=1.3.0",
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "PyMuPDF>=1.22.5"
]
